# virtual_audio

./: .gitignore  BUILD_ISSUES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PUBLISH_CHECKLIST.md  README.md  deny.toml  readme.md  setup.sh  specs.md
.github/workflows/: ci.yml
benches/: audio_bench.rs
docs/: README.md  api-overview.md  configuration.md  errors.md  installation.md  monitoring.md  quick-start.md  specs.md
examples/: duplicate_output.rs  list_devices.rs  route_app.rs  virtual_microphone.rs  virtual_microphone_complete.rs
src/: audio.rs  buffer.rs  lib.rs  main.rs
src/platform/: linux.rs  mod.rs  windows.rs
tests/: integration_test.rs
